# M2_Projet_court_Clustal

./: README.md  pyproject.toml
data_test/DNA/: insulin_dna.fasta
data_test/protein/: insulin.fasta  insulin_bis.fasta
src/: alignement.py  main.py  profil.py  score.py  tree.py
